--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-     <!--primera seccion-->
+    <!--primera seccion-->
     <section>
-     
       <div>
         <!--inicio del navegador-->
-        <nav>
-          <div><img />logo Netflix</div>
+        <nav class="nav">
+          <div>
+            <img src="./pictures/netflix_PNG25.png" height="70px" />
+          </div>
           <div>
             <select class="idiomas">
               <option label="Español" value="es-VE">Español</option>
@@ -26,7 +27,7 @@
       <!--fin del navegador del navgador-->
 
       <!--parte central primera seccion-->
-      <div>
+      <div id="centro">
         <div>
           <h1>Peliculas y series</h1>
           <h1>ilimitadas y mucho</h1>
