--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
           </div>
           <div>
             <select class="idiomas">
+              <option selected disabled>Espanol</option>
+              <!--<option>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</option>-->
               <option label="Español" value="es-VE">Español</option>
               <option label="English" value="en-VE">English</option>
             </select>
