--- a/index.html
+++ b/index.html
@@ -29,17 +29,15 @@
       <!--fin del navegador del navgador-->
 
       <!--parte central primera seccion-->
-      <div id="centro">
+      <div class="centro">
         <div>
-          <h1>Peliculas y series</h1>
-          <h1>ilimitadas y mucho</h1>
-          <h1>mas</h1>
+          <h1>Peliculas y series <br>ilimitadas y mucho <br>mas </h1>
           <h3>A partir de USD 3,99. Cancela cuando quieras.</h3>
           <p>
             Quieres ver Netflix ya? Ingresa tu email para crear una cuenta o
-            reinicir tu
+            reinicir tu <br>membresia de Netflix.
           </p>
-          <p>membresia de Netflix.</p>
+          
         </div>
         <div>
           <!--<input autocomplete="email" minlength="5" maxlength="50" type="email" name="email">-->
