--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
         <!--inicio del navegador-->
         <nav class="nav">
           <div>
-            <img src="./pictures/netflix_PNG25.png" height="70px" />
+            <img src="./pictures/netflix_PNG25.png" 
+            height="70px" 
+            />
           </div>
           <div>
             <select class="idiomas">
@@ -30,6 +32,7 @@
 
       <!--parte central primera seccion-->
       <div class="centro">
+ 
         <div>
           <h1>Peliculas y series <br>ilimitadas y mucho <br>mas </h1>
           <h3>A partir de USD 3,99. Cancela cuando quieras.</h3>
@@ -45,7 +48,9 @@
           <button>Comenzar ></button>
         </div>
       </div>
+      
     </section>
+    <div class="linea">.           </div>
     <!--fin primera parte de la pantalla-->
   </body>
 </html>
