--- a/index.html
+++ b/index.html
@@ -9,48 +9,46 @@
   <body>
     <!--primera seccion-->
     <section>
-      <div>
-        <!--inicio del navegador-->
-        <nav class="nav">
-          <div>
-            <img src="./pictures/netflix_PNG25.png" 
-            height="70px" 
-            />
-          </div>
-          <div>
-            <select class="idiomas">
-              <option selected disabled>Espanol</option>
-              <!--<option>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</option>-->
-              <option label="Español" value="es-VE">Español</option>
-              <option label="English" value="en-VE">English</option>
-            </select>
-            <button>Iniciar Sesion</button>
-          </div>
-        </nav>
-      </div>
+      <!--inicio del navegador-->
+      <nav class="nav">
+        <div class="nav_logo">
+          <img src="./pictures/netflix_PNG25.png" width="170px" />
+        </div>
+
+        <div>
+          <select class="idiomas">
+            <option selected disabled>Espanol</option>
+            <!--<option>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</option>-->
+            <option label="Español" value="es-VE">Español</option>
+            <option label="English" value="en-VE">English</option>
+          </select>
+        </div>
+
+        <div >
+          <button class="boton">Iniciar Sesion</button>
+        </div>
+      </nav>
+
       <!--fin del navegador del navgador-->
 
       <!--parte central primera seccion-->
-      <div class="centro">
- 
-        <div>
-          <h1>Peliculas y series <br>ilimitadas y mucho <br>mas </h1>
+      <header class="header">
+        <div class="contenido">
+          <h1>Peliculas y series <br />ilimitadas y mucho <br />mas</h1>
           <h3>A partir de USD 3,99. Cancela cuando quieras.</h3>
           <p>
             Quieres ver Netflix ya? Ingresa tu email para crear una cuenta o
-            reinicir tu <br>membresia de Netflix.
+            reinicir tu <br />membresia de Netflix.
           </p>
-          
         </div>
         <div>
           <!--<input autocomplete="email" minlength="5" maxlength="50" type="email" name="email">-->
           <input type="email" placeholder="Email" />
           <button>Comenzar ></button>
         </div>
-      </div>
-      
+      </header>
     </section>
-    <div class="linea">.           </div>
+    <div class="linea">.</div>
     <!--fin primera parte de la pantalla-->
   </body>
 </html>
